--- a/Interest Calculator.html
+++ b/Interest Calculator.html
@@ -15,16 +15,18 @@
         border-collapse: collapse;
         width: 20%;
         border-radius: 4%;
-        background-color: black;
+        background-image: url(https://scontent.fktm4-1.fna.fbcdn.net/v/t1.6435-9/49815661_1972646762782983_2038411944200765440_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=14N_4X1Z4s0Q7kNvgFm1BeC&_nc_ht=scontent.fktm4-1.fna&oh=00_AYBu1mYalW7FFNaaL1-SnsBZO-ahbF0GQn_Sl6fYAjDjZA&oe=6693E0A1);
+        background-size: 100%;
     }
 
     div {
         margin-left: 11%;
-        color: white;
+        color: rgb(251, 255, 3);
     }
 
     .button {
         border-radius: 15%;
+        background-color :rgb(2, 183, 255);
     }
 
     .solve {
